CCM-11188: Patch letter endpoint (#173)
* Change env var name

* fix env var name

* Refactor contracts and mappers

* Fix invalid error message

* Clean up updateLetterStatus

* patchLetters to patchLetter

* Fix sonar issues

* Read headers in lower case
