# sandbox/api/openapi.yaml
@@ -213,7 +213,7 @@ paths:
                   value:
                     errors:
                     - code: NOTIFY_INVALID_REQUEST
-                      detail: "Invalid Request: Only 'limit' query parameter is supported"
+                      detail: "Only 'limit' query parameter is supported"
                       id: rrt-1931948104716186917-c-geu2-10664-3111479-3.0
                       links:
                         about: https://digital.nhs.uk/developer/api-catalogue/nhs-notify-supplier
@@ -223,7 +223,7 @@ paths:
                   value:
                     errors:
                     - code: NOTIFY_INVALID_REQUEST
-                      detail: "Invalid Request: limit parameter must be a positive\
+                      detail: "The limit parameter must be a positive\
                         \ number not greater than 2500"
                       id: rrt-1931948104716186917-c-geu2-10664-3111479-3.0
                       links:
@@ -609,7 +609,7 @@ paths:
     patch:
       description: Update the status of a letter by providing the new status in the
         request body.
-      operationId: patchLetters
+      operationId: patchLetter
       parameters:
       - description: "Unique request identifier, in the format of a GUID"
         explode: false
@@ -755,7 +755,7 @@ paths:
                     id: "123654789"
                     type: Letter
             schema:
-              $ref: "#/components/schemas/patchLetters_request"
+              $ref: "#/components/schemas/patchLetter_request"
         required: true
       responses:
         "200":
@@ -1183,7 +1183,7 @@ components:
       - specificationId
       - status
       type: object
-    patchLetters_request:
+    patchLetter_request:
       properties:
         data:
           $ref: "#/components/schemas/postLetters_request_data_inner"
